--- a/pages/index.html
+++ b/pages/index.html
@@ -1,22 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <%- include('layout/meta'); -%>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>index</title>
-</head>
-
-<body>
-  <main>
-    <div class="container">
-      <div class="row">
-        <div class="col-5"><div class="box"></div></div>
-        <div class="col-5"><div class="box"></div></div>
-        <div class="col-2"><div class="box"></div></div>
-      </div>
-    </div>
-  </main>
-  <script type="module" src="../main.js"></script>
-</body>
-
+  </head>
+  <body>
+    <%- include('./layout/header'); -%>
+    <main></main>
+    <%- include('./layout/footer'); -%>
+    <script type="module" src="../main.js"></script>
+  </body>
 </html>
