[Update] make a lot of progress

--- a/pages/index.html
+++ b/pages/index.html
@@ -1,16 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <%- include('./layout/link'); -%>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <%- include('./layout/link'); -%>
     <title>index</title>
-  </head>
-  <body>
+</head>
+
+<body>
+  <main class="d-flex align-items-start">
     <%- include('./layout/header'); -%>
-    <main></main>
-    <%- include('./layout/footer'); -%>
-    <script type="module" src="../main.js"></script>
-  </body>
+      <div class="container">
+        <nav class="navbar navbar-expand-lg bg-light">
+          <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
+              aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+              <a class="navbar-brand" href="#">Hidden brand</a>
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link disabled">Disabled</a>
+                </li>
+              </ul>
+              <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+              </form>
+            </div>
+          </div>
+        </nav>
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th scope="row" class="fw-bolder">ID</th>
+              <th scope="row" class="fw-bolder">Name</th>
+              <th scope="row" class="fw-bolder">Email</th>
+              <th scope="row" class="fw-bolder">Verified</th>
+              <th scope="row" class="fw-bolder"></th>
+              <th scope="row" class="fw-bolder"></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">#1</th>
+              <td>Emir Wicks</td>
+              <td>emir.wicks@mail.com</td>
+              <td>Yes</td>
+              <td><button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#revealProfile"><span
+                    class="material-icons fs-11">visibility</span> </button></td>
+              <td><button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#editAdmin"><span
+                    class="material-icons fs-11">mode_edit</span> </button></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="modal fade" id="revealProfile" data-bs-keyboard="false" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+            </div>
+          </div>
+        </div>
+      </div>
+  </main>
+  <script type="module" src="../main.js"></script>
+</body>
+
 </html>
