--- a/pages/index.html
+++ b/pages/index.html
@@ -67,10 +67,34 @@
       <div class="modal fade" id="revealProfile" data-bs-keyboard="false" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
+            <div class="modal-body p-8">
+              <div class="d-flex gap-6">
+                <div class="ratio ratio-1x1" style="width: 150px;">
+                  <img src="../assets/images/emir.jpeg" alt="user's profile picture" class="object-fit-cover">
+                </div>
+                <div class="d-flex flex-column align-items-start">
+                  <span>#1</span>
+                  <span>Admin</span>
+                  <span class="fs-11 fw-bolder">Emir Wicks</span>
+                  <span class="fs-16 text-secondary">emir.wicks@mail.com</span>
+                  <div class="py-1 px-2 mt-auto" style="background-color: #F8F9FA;"><span>Verified</span></div>
+                </div>
+                <div class="ms-auto d-flex flex-column align-items-center">
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  <p class="mt-auto">
+                    <button class="btn link-success" type="button" data-bs-toggle="collapse"
+                      data-bs-target="#collapseAdminEditing" aria-expanded="false" aria-controls="collapseAdminEditing">
+                      <span class="material-icons fs-11">expand_more</span>
+                    </button>
+                  </p>
+                </div>
+              </div>
+              <div class="collapse mt-8" id="collapseAdminEditing">
+                <div class="d-flex justify-content-end gap-4">
+                  <button type="button" class="btn btn-outline-danger btn-sm fw-bolder py-2 px-8">Deactivate</button>
+                  <button type="button" class="btn btn-success btn-sm fw-bolder py-2 px-8">Edit</button>
+                </div>
+              </div>
             </div>
           </div>
         </div>
