[hotfix] fixed navbar-brand

--- a/pages/index.html
+++ b/pages/index.html
@@ -21,7 +21,7 @@
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-              <a class="navbar-brand fs-11 fw-bolder link-dark" href="#">Admin</a>
+              <span class="navbar-brand fs-11 fw-bolder link-dark" href="#">Admin</span>
               <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-0 ms-lg-12">
                 <li class="nav-item">
                   <button type="button" class="nav-link btn" aria-current="page" href="#">
