[update] improved the position of side bar

--- a/pages/index.html
+++ b/pages/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <main class="d-flex align-items-start">
+  <main class="d-flex">
     <%- include('./layout/header'); -%>
       <div class="container px-8">
         <nav class="navbar navbar-expand-lg py-8">
