[Update] fixed the space between checkbox in "editAdmin"

--- a/pages/index.html
+++ b/pages/index.html
@@ -323,8 +323,8 @@
                   <option selected>Admin</option>
                 </select>
               </div>
-              <div class="mb-6 border-bottom pb-6">
-                <h3 class="fs-13 fw-bolder mb-4">Custom Access</h3>
+              <div class="mb-6 border-bottom pb-6 d-flex flex-column gap-4">
+                <h3 class="fs-13 fw-bolder">Custom Access</h3>
                 <div class="form-check">
                   <input type="checkbox" value="" id="lectureCheck" class="form-check-input">
                   <label for="lectureCheck">Lecture</label>
